jekyll-refresh-td

--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
 ---
 layout: default
-title: JUNLEE
+title: Home
+slogan: "Mga himaya sa hunahuna.."
 ---
-
-<h1>{{ "Hello World!" | downcase }}</h1>
-
-<ul>
-    <li>m. midnightvinta midnight h12</li>
-    <li>thegreedy h12thegreedy</li>
-</ul>
